2003-05-19  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.1.20.

        * TranslatorReader now understands the SET directive.  It is thus
        now possible to set arbitrary attributes for pages which get
        stored in the WikiPage.

2003-05-18  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.1.19.

        * PageManager is now better protected against null page names.

        * Mass commit of authorization code.

2003-05-13  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.1.18.

        * WeblogPlugin should be now quite a lot faster determining which
        pages are blog entries.  I had to do this because my own weblog
        was getting unbearably slow.

        * v2.1.17.

        * Oops, wikiContext was accidentally changed to pageContext in
        Edit.jsp.  Reported by Erik Bunn. 

2003-05-11  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.1.16.

        * Added TemplateDir tag, so that templates can now figure out
        which template they belong to. 

2003-05-09  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.1.15.

        * Reduced common code in main JSP files by combining the most
        commonly used methods into WikiEngine.createContext().

2003-05-08  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.1.14.

        * Added the search_highlight script as suggested by Santiago
        Gala.  After a search when you go to a page, you will see all of
        the search terms highlighted, as defined in the CSS file.  If you
        have your own template, add the following to the ViewTemplate.jsp
        file: 
        
        <script src="templates/default/search_highlight.js"
        type="text/javascript"></script>
        
        And do not forget to copy the search_highlight.js file to your
        template.

2003-05-07  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.1.13.
